Fixing issue with sticky menu on mobile not scrolling, z-index issue with feedback widget sitting on top of menu

--- a/src/components/feedback-widget/feedback-widget.css
+++ b/src/components/feedback-widget/feedback-widget.css
@@ -214,6 +214,12 @@
 			}
 		}
 
+		/* stylelint-disable-next-line selector-max-id */
+
+		& .current-url {
+			display: none;
+		}
+
 		& textarea, input {
 			/* Layout */
 			inline-size: 100%;
